<resources>
    <string name="app_name">LifeCycleChallenge</string>
    <string name="bread">bread</string>
    <string name="cake">cake</string>
    <string name="cereal">cereal</string>
    <string name="milk">milk</string>
    <string name="orange">orange</string>
    <string name="banana">banana</string>
    <string name="apple">apple</string>
    <string name="cheese">cheese</string>
    <string name="egg">egg</string>
    <string name="yakult">Yakult</string>
    <string name="check_shop">Check Shop</string>
    <string name="check_map">Check Map</string>
    <string name="enter_store_name_or_address">Enter store name or address</string>
    <string name="locate">Locate</string>
</resources>